--- a/microservices-demo/user/pom.xml
+++ b/microservices-demo/user/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>de.rattermeyer.demo.ms</groupId>
     <artifactId>user</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -12,7 +12,7 @@
     <description>Demo project for Spring Boot</description>
 
     <parent>
-        <groupId>com.opitzconsulting.demo.ms</groupId>
+        <groupId>de.rattermeyer.demo.ms</groupId>
         <artifactId>microservices-demo</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>..</relativePath> <!-- lookup parent from repository -->
