--- a/microservices-demo/user/src/main/resources/bootstrap.yml
+++ b/microservices-demo/user/src/main/resources/bootstrap.yml
@@ -3,3 +3,20 @@ spring:
     consul:
       host: 192.168.33.10
       port: 8500
+      config:
+ #       prefix: a2bd4e/properties
+        prefix: ${TAG}/properties
+      discovery:
+        healthCheckPath: /health
+        healthCheckInterval: 15s
+        management-port: ${management.port}
+security:
+  user:
+    password: weak
+management:
+  port: 8081
+  security:
+    enabled: false
+endpoints:
+  health:
+    sensitive: false
